Fix sticky hover effect on mobile devices

--- a/application/src/client/Blog/BlogBody.css
+++ b/application/src/client/Blog/BlogBody.css
@@ -31,7 +31,9 @@
     text-decoration: none;
   }
 
-  .article-link:hover {
-    text-decoration: underline;
+  @media (hover: hover) {
+    .article-link:hover {
+      text-decoration: underline;
+    }
   }
 }
