--- a/application/src/client/Morning/MorningBody.css
+++ b/application/src/client/Morning/MorningBody.css
@@ -92,8 +92,11 @@
     cursor: pointer;
     font-size: 1.25rem;
     border-radius: var(--border-radius);
+  }
 
-    &:hover {
+  @media (hover: hover) {
+    .mode-button:hover,
+    .submit-button:hover {
       background-color: var(--bright-selected-color);
     }
   }
