--- a/application/src/client/Statistics/StatisticsBody.css
+++ b/application/src/client/Statistics/StatisticsBody.css
@@ -57,8 +57,10 @@
     color: var(--text-color);
     min-height: 30px;
     cursor: pointer;
+  }
 
-    &:hover {
+  @media (hover: hover) {
+    .more-button:hover {
       background-color: var(--selected-color);
     }
   }
